[package]
name = "svinge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["json", "blocking", "gzip", "brotli"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
actix-web = "4"
serde_json = "1.0.91"
env_logger = "0.10.0"
derive_more = "0.99.17"
clap = { version = "4.0.32", features = ["derive"] }
futures = "0.3.25"
log = "0.4.17"
